--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,13 +5,46 @@ on:
     - cron: "0 5 * * *"
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
+  check-release:
+    runs-on: ubuntu-latest
+    outputs:
+      exists: ${{ steps.check.outputs.exists }}
+      commit: ${{ steps.hash.outputs.commit }}
+    steps:
+      - name: Clone Mesa (Shallow)
+        run: git clone --depth 1 https://gitlab.freedesktop.org/mesa/mesa.git
+
+      - name: Get Mesa commit hash
+        id: hash
+        run: |
+          cd mesa
+          COMMIT=$(git rev-parse --short HEAD)
+          echo "Detected Commit: $COMMIT"
+          echo "commit=$COMMIT" >> $GITHUB_OUTPUT
+
+      - name: Check for Existing Release
+        id: check
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          TAG="mesa-git-${{ steps.hash.outputs.commit }}"
+          echo "Checking if release '$TAG' exists..."
+
+          # 'gh release view' exits with 0 if found, 1 if not.
+          if gh release view "$TAG" > /dev/null 2>&1; then
+            echo "Release found. Stopping workflow."
+            echo "exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "Release not found. Proceeding to build."
+            echo "exists=false" >> $GITHUB_OUTPUT
+          fi
   build-mesa:
+    needs: check-release
+    if: needs.check-release.outputs.exists != 'true'
     runs-on: ubuntu-latest
     env:
+      MESA_COMMIT: ${{ needs.check-release.outputs.commit }}
       CC: clang-21
       LLVM_CONFIG: /usr/lib/llvm-21/bin/llvm-config
       PKG_CONFIG_PATH: /usr/local/lib/pkgconfig:/usr/lib/pkgconfig:/usr/lib/x86_64-linux-gnu/pkgconfig
@@ -75,24 +108,6 @@ jobs:
 
       - name: Clone Mesa
         run: git clone --depth 1 https://gitlab.freedesktop.org/mesa/mesa.git
-
-      - name: Get Mesa commit hash
-        run: |
-          cd mesa
-
-          # Trust this directory.
-          git config --global --add safe.directory $(pwd)
-
-          # Capture the hash
-          MESA_COMMIT=$(git rev-parse --short HEAD)
-
-          if [ -z "$MESA_COMMIT" ]; then
-            echo "::error::Could not determine git commit hash! Check if the clone step succeeded."
-            exit 1
-          fi
-
-          echo "MESA_COMMIT=$MESA_COMMIT" >> $GITHUB_ENV
-          echo "Successfully detected Mesa commit: $MESA_COMMIT"
 
       - name: Compile Wayland manually
         run: |
