--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -143,7 +143,7 @@ jobs:
             -Dllvm=enabled \
             -Dshared-llvm=enabled \
             -Dgallium-rusticl=false \
-            -Dvideo-codecs=all_free \
+            -Dvideo-codecs=all \
             -Dwayland:documentation=false
 
       - name: Build and Install
@@ -156,7 +156,7 @@ jobs:
           cd mesa/install
           mkdir -p lib/bundled
 
-          WANTED="libLLVM|libdrm|libelf|libzstd|libunwind|libexpat|libedit|libxml2|libicu"
+          WANTED="libLLVM|libedit|libxml2|libicu"
 
           DRIVERS=$(find . -name "libvulkan_*.so" -o -name "libGLX_mesa.so" -o -name "libEGL_mesa.so")
 
