activate amd-anti-lag layer to mirror Nixpkgs flags... trying to fix FSR 4

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -141,6 +141,7 @@ jobs:
             -Dvulkan-drivers=amd,intel \
             -Dbuildtype=release \
             -Dllvm=enabled \
+            -Dvulkan-layers=amd-anti-lag \
             -Dshared-llvm=enabled \
             -Dgallium-rusticl=false \
             -Dvideo-codecs=all \
