--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,7 @@ jobs:
         id: update
         run: |
           cd pkgs
+          nix shell nixpkgs#nix-prefetch-git
           OLD_MESA=$(jq -r '.mesa.rev' sources.json)
           bash update.sh
           NEW_MESA=$(jq -r '.mesa.rev' sources.json)
