--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build "Portable" Mesa-Git (AMD/Intel/NVIDIA + LLVM 21) + Cache for Nix
 on:
   schedule:
     - cron: "0 5 * * *" # Nightly
-    - cron: "30 6 * * 3" # Weekly
+    - cron: "30 5 * * 3" # Weekly
   workflow_dispatch:
     inputs:
       task:
@@ -38,11 +38,11 @@ jobs:
             experimental-features = nix-command flakes
             accept-flake-config = true
 
-      #- name: Setup Cachix
-      #  uses: cachix/cachix-action@v15
-      #  with:
-      #    name: ${{ env.CACHIX_CACHE }}
-      #    authToken: ${{ secrets.CACHIX_KEY }}
+      - name: Setup Cachix
+        uses: cachix/cachix-action@v15
+        with:
+          name: ${{ env.CACHIX_CACHE }}
+          authToken: ${{ secrets.CACHIX_KEY }}
 
       - name: Update Sources
         id: update
@@ -82,34 +82,37 @@ jobs:
 
           tar -cJf "mesa-git-${MESA_REV}.tar.xz" -C artifact .
 
-      #- name: Create Release
-      #  if: steps.update.outputs.changed == 'true' || github.event_name == 'workflow_dispatch'
-      #  uses: softprops/action-gh-release@v2
-      #  with:
-      #    tag_name: mesa-git-${{ steps.update.outputs.mesa_rev }}
-      #    name: "mesa-git-${{ steps.update.outputs.mesa_rev }}"
-      #    body: |
-      #      **Automated Nightly Build**
+          echo "Bundle complete & archive created!"
 
-      #      Contains:
-      #        - 64-bit Mesa (`lib/`)
-      #        - 32-bit Mesa (`lib32/`)
-      #        - Vulkan ICDs and layers (`share/`)
-      #        - Bundled LLVM 21 + dependencies (`lib/bundled/`, `lib32/bundled/`)
+      - name: Create Release
+        if: steps.update.outputs.changed == 'true' || github.event_name == 'workflow_dispatch'
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: mesa-git-${{ steps.update.outputs.mesa_rev }}
+          name: "mesa-git-${{ steps.update.outputs.mesa_rev }}"
+          prerelease: true
+          body: |
+            **Automated Nightly Build**
 
-      #    files: mesa-git-${{ steps.update.outputs.mesa_rev }}.tar.xz
+            Contains:
+              - 64-bit Mesa (`lib/`)
+              - 32-bit Mesa (`lib32/`)
+              - Vulkan ICDs and layers (`share/`)
+              - Bundled LLVM 21 + dependencies (`lib/bundled/`, `lib32/bundled/`)
 
-      #- name: Commit Updates
-      #  if: steps.update.outputs.changed == 'true'
-      #  uses: stefanzweifel/git-auto-commit-action@v5
-      #  with:
-      #    commit_message: "nightly: ${{ steps.update.outputs.mesa_rev }}"
-      #    branch: nightly
-      #    file_pattern: "pkgs/sources.json flake.lock"
+          files: mesa-git-${{ steps.update.outputs.mesa_rev }}.tar.xz
+
+      - name: Commit Updates
+        if: steps.update.outputs.changed == 'true'
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "nightly: ${{ steps.update.outputs.mesa_rev }}"
+          branch: nightly
+          file_pattern: "pkgs/sources.json flake.lock"
 
   promote-to-main:
-    if: github.event.schedule == '30 6 * * 3' || inputs.task == 'promote-to-main'
-    runs-on: ubuntu-latest
+    if: github.event.schedule == '30 5 * * 3' || inputs.task == 'promote-to-main'
+    runs-on: self-hosted
     permissions:
       contents: write
     steps:
@@ -150,7 +153,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v${{ steps.merge.outputs.mesa_rev }}
-          name: "Mesa Git ${{ steps.merge.outputs.mesa_rev }}"
+          name: "mesa-git-${{ steps.merge.outputs.mesa_rev }}"
           prerelease: false
           body: |
             **Weekly Stable Release**
