--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,14 +41,14 @@ jobs:
 
       - name: Setup Attic for locally hosted binary cache
         run: |
-          nix profile install nixpkgs#attic-client
+          nix profile add nixpkgs#attic-client
           attic login local $ATTIC_SERVER $ATTIC_TOKEN
           attic use $ATTIC_CACHE
 
       - name: Update Sources
         id: update
         run: |
-          nix profile install nixpkgs#nix-prefetch-git
+          nix profile add nixpkgs#nix-prefetch-git
           cd pkgs
           OLD_MESA=$(jq -r '.mesa.rev' sources.json)
           bash update.sh
