--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -148,28 +148,19 @@ jobs:
         if: steps.merge.outputs.skipped != 'true'
         run: git push origin main
 
-      - name: Create Stable Release
+      - name: Create "Stable" Release
         if: steps.merge.outputs.skipped != 'true'
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ steps.merge.outputs.mesa_rev }}
+          tag_name: stable-${{ steps.merge.outputs.mesa_rev }}
           name: "mesa-git-${{ steps.merge.outputs.mesa_rev }}"
           prerelease: false
           body: |
-            **Weekly Stable Release**
+            **Weekly "Stable" Release**
 
             Mesa commit: `${{ steps.merge.outputs.mesa_rev }}`
 
-            This build has been running on the nightly branch without reported issues.
+            This is the latest build that was successfully compiled on the nightly branch since the last release.
 
             **Portable Download:**
             [Download Artifact from Nightly Release](https://github.com/${{ github.repository }}/releases/tag/nightly-${{ steps.merge.outputs.mesa_rev }})
-
-            ### NixOS Usage
-            #
-            {
-              inputs.mesa-git.url = "github:powerofthe69/mesa-git-nix";
-              # ...
-              nixpkgs.overlays = [ inputs.mesa-git.overlays.default ];
-              drivers.mesa-git.enable = true;
-            }
